@@ -1,7 +1,14 @@
+2008-01-09  Sergio Villar Senin  <svillar@igalia.com>
+
+	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.c:
+	(creater): added some checks in order to properly detect the parent of
+	the newly created folder
+
 2008-01-09  Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
 	
 	* small fixes / cleanups for tny-maemo-conic-device
 
+>>>>>>> .r3227
 2008-01-08  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-maemo/tny-maemo-conic-device.c: fixed an invalid g_free
